--- a/async-requests/poll/task.html
+++ b/async-requests/poll/task.html
@@ -25,10 +25,10 @@
       <div class="card">
         <div class="poll">
           <div class="poll__title" id="poll__title">
-            <!--   Как вы относитесь к собакам? -->
+            Как вы относитесь к собакам?
           </div>
           <div class="poll__answers poll__answers_active" id="poll__answers">
-            <!-- <button class="poll__answer">
+            <button class="poll__answer">
               Хорошо
             </button>
             <button class="poll__answer">
@@ -39,7 +39,7 @@
             </button>
             <button class="poll__answer">
               Кто тут?
-            </button> -->
+            </button>
           </div>
         </div>
       </div>
