--- a/client-state/text-editor/task.html
+++ b/client-state/text-editor/task.html
@@ -22,7 +22,8 @@
         <div class="card">
             <textarea id="editor" cols="30" rows="10"></textarea>
         </div>
-    </main>    
+    </main> 
+    <button id='btn'>Очистить</button>
     <script src="task.js"></script>
 </body>
 </html>
